--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
         <p>Getting ready to go, along with a handful of other bikers at the same campground. Not many – September is off-peak season. One guy I talk to has biked from France and is finishing in Budapest, that’s 50 days down and 9 to go.</p>
         <p>Anyway, my turn on the recliner this morning.</p>
         <figure>
-            <img src="assets/stage5/recliner.jpg" >
+            <img src="assets/stage5/recliner.jpeg" >
         </figure>
         <figure>
             <img src="assets/stage5/waiting.jpeg" >
